<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/android_developemet_concept"
        android:textColor="#026057"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <HorizontalScrollView
        android:layout_width="294dp"
        android:layout_height="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/web" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo3"
                app:srcCompat="@drawable/web2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo4"
                app:srcCompat="@drawable/web3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo5"
                app:srcCompat="@drawable/web6" />
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="349dp"
        android:layout_height="335dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="12sp"
                android:text="@string/textview2"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>